fixed text alignment bottom content

--- a/css/index.css
+++ b/css/index.css
@@ -91,9 +91,9 @@ a{
 h1, h2, h3, h4, h5 {
     font-size: 1.5rem;
     line-height: 5%;
-    margin-bottom: 15px;
     font-family: 'Rubik', sans-serif;
     font-weight: bold;
+    padding: 10% 0;
 }
 h2{
     font-size: 20px;
@@ -118,7 +118,6 @@ p {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    margin-top: 5%;
     margin-bottom: 20px;
     border-bottom: 1px dashed black;
 }
@@ -189,6 +188,7 @@ p {
     display: flex;
     margin: 0 2% 20px;
     justify-content: space-around;
+    text-align: left;
 }
 
 .bottom-content .text-container {
